# Mint

./: CMakeLists.txt  README.md
include/: Mint.h  mtCFunction.h  mtModule.h  mtObject.h  mtScope.h
include/internal/: mtAST.h  mtInternalModule.h  mtToken.h  mtTokenizer.h
mint/: CMakeLists.txt  mtBlock.c  mtExpression.c  mtFunction.c  mtFunction.h  mtIfStatement.c  mtImport.c  mtImport.h  mtMain.c
modules/: CMakeLists.txt  io.c
modules/internal/: mtInternalModule.c
objects/: CMakeLists.txt  mtInternalObject.h  mtNumberObject.c  mtObject.c  mtScope.c
parser/parser/: mtAST.c  mtParser.c
parser/tokenizer/: mtTokenizer.c
util/: mtHashmap.c
